Display Price Range in Pricing SKUs Table
The price display in the Pricing SKUs index is somewhat confusing, and
would show different "Regular Price" data depending on the sale state of
the SKU. To resolve this, replace the two price columns with "Sell
Price", a column that renders a price range if there are multiple prices
set on the SKU, and indicates that it's always going to show the price
that a SKU is being sold for. Otherwise, it will just show the `#sell`
price of the SKU.

WORKAREA-311

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -1644,6 +1644,7 @@ en:
         search_id: Search ID
         search_terms: Search Terms
         searches: Searches
+        sell_price: Sell Price
         send_account_creation_email: Notify Them by Email
         service: Service
         service_code: Service Code
