--- a/storefront/config/locales/en.yml
+++ b/storefront/config/locales/en.yml
@@ -217,7 +217,7 @@ en:
         items_required: You must add an item to your cart to checkout
         order_custom_pricing: Your cart has custom pricing, you cannot edit the contents of your cart.
         download_unavailable: This download is no longer available. Contact customer support for more information.
-        no_available_shipping_options: There are no available shipping options for your shipping adddress.
+        no_available_shipping_options: There are no available shipping options for your shipping address.
 
       forms:
         required: '*'
