Add privacy popup
When enabled, this shows a popup blocking interaction until
the visitor consents to cookie use.

It's disabled by default.

--- a/storefront/config/locales/en.yml
+++ b/storefront/config/locales/en.yml
@@ -378,6 +378,7 @@ en:
         back_to_top: Back To Top
 
       users:
+        agree: I Agree
         account: Your Account
         email: Email
         password: Password
