Allow inquiry subjects to be localized
WORKAREA-238

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -97,6 +97,8 @@ en:
         under: 'Under %{price}'
     inventory_sku:
       name: "Inventory %{id}"
+    inquiry:
+      subjects: {}
     order:
       name: "Order %{id}"
       traffic_referrer:
