--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -102,6 +102,7 @@ en:
       name: "Fulfillment SKU %{id}"
     inventory_sku:
       name: "Inventory %{id}"
+      jump_to_text: "%{id} (%{count} sellable units)"
     inquiry:
       subjects: {}
     order:
