Update inventory sku jump to text
Co-authored-by: Ben Crouse <bcrouse@workarea.com>

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -102,7 +102,7 @@ en:
       name: "Fulfillment SKU %{id}"
     inventory_sku:
       name: "Inventory %{id}"
-      jump_to_text: "%{id} (%{count} sellable units)"
+      jump_to_text: "%{id} (%{count} sellable)"
     inquiry:
       subjects: {}
     order:
