Add Multiplier for Bulk Editing Product Pricing
When bulk editing products, Workarea previously allowed the admin to set
pricing on all SKUs in bulk. This was always a flat amount, and all
prices were updated to match that amount. To build upon this feature,
bulk editing products will now enable admins to set a percentage or
amount they wish to increase/decrease the prices by. This allows, for
example, a merchandiser to mark up all products in their bulk edit query
20%, or mark down all products by $15. The existing functionality for
setting these prices has also been preserved, and extended to allow for
setting the price to a percentage of the existing price, such as setting
the price of a $20 to 20%, which would cause the product's price to be
$4.

WORKAREA-276

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -200,7 +200,15 @@ en:
           settings: SKU Pricing Settings
           title: Pricing
           info: Prices Info
-          info_message: For products with existing prices, regular and sale prices will be applied to all prices with a minimum quantity of 1.
+          info_message: >
+            For products with existing prices, regular and sale prices
+            will be applied to all prices with a minimum quantity of 1.
+            Setting all prices to a flat amount does not apply to tiered
+            pricing.
+          increase: 'Increase all prices by'
+          decrease: 'Decrease all prices by'
+          set: 'Set prices with a minimum quantity of 1 to'
+          percentage: '%'
         review:
           no_change: No change
           save_and_finish: Save and Finish
@@ -218,6 +226,12 @@ en:
           with_a_new_release: With a new release
           with_release: With %{release_name}
           which_release_placeholder: Mother's Day %{year}
+          pricing:
+            increase_html: 'Increase <strong>all %{kind} prices</strong> by'
+            decrease_html: 'Decrease <strong>all %{kind} prices</strong> by'
+            set_html: 'Set <strong>%{kind} prices</strong> with a minimum quantity of 1 to'
+            regular: regular
+            sale: sale
         settings:
           title: Settings
         tags:
