--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -3527,9 +3527,11 @@ en:
         show:
           boosts:
             field_weight: Field Weight
-            field_weight_description: Define which fields are most important when calculating sort. Values are multipliers, and only need to be relative to one another. A zero will remove that field from being matched.
+            field_weight_description: Control how much fields affect sorting in results. Slide all the way to the left to remove the field, all the way to the right for maximum effect.
+            disabled: "off"
+            max: max
             product_popularity: Product Popularity
-            product_popularity_description: Tune the effect of product popularity on search result sorting. A factor greater than 1 increases the effect, and a factor less than 1 decreases the effect.
+            product_popularity_description: Tune the effect of product popularity on search result sorting.
             title: Boosts
           button: Save Search Settings
           dashboard_link: Settings Dashboard
@@ -3537,7 +3539,7 @@ en:
             description: Define what filters should be shown on search results and categories.
             title: Filters
           synonyms:
-            description: Define groups of search terms that mean the same thing. Keep in mind this is not the same as "return the same results". For that task, use search customizations.
+            description_html: Define groups of search terms that mean the same thing. Keep in mind this is not the same as "return the same results". For that task, use <a href="%{customizations_path}">search customizations</a>.
             phrase_example: united states,u s a,united states of america => usa
             phrase_example_description: 'You can create synonym functionality out of a phrase like so:'
             simple_example: "denim, jeans, dungarees \nshirt, pullover, blouse"
